--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -8,18 +8,18 @@ body				{width: 100%;
 					padding: 10px;
 					font-family: Verdana, Arial; 
 					background-color:  #FFFFFF;}
-.map-canvas			{width: 100%;
+#map-canvas			{ height: 100%;
 					margin: 0px;
 					padding: 0px;}
-.myCanvas			{width: 100%;
+#myFlorida			{ height: 100%;
 					margin: 0px;
 					padding: 0px;}
-}
-.myfilter			{padding: 20px}
+
+#myfilter			{padding: 20px}
 img					{width: 100%;
 					display: block;
 					margin-left: auto;
 					margin-right: auto;}
 h1, h2, p, footer		{padding: 20px;}
 
-form, ul	, li			{padding: 10px;}
+form, ul, li			{padding: 10px;}
