--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -1,17 +1,22 @@
  html		 		{width: 100%;
+					height: 100%;
 					margin: 0px;
 					padding: 10px;
 					font-family: Verdana, Arial; 
 					background-color:  #FFFFFF;}
+					
 body				{width: 100%;
+					height: 100%;
 					margin: 0px;
 					padding: 10px;
 					font-family: Verdana, Arial; 
 					background-color:  #FFFFFF;}
-#map-canvas			{ height: 100%;
+#map-canvas			{  height: 800px;
+					width: 100%;
 					margin: 0px;
 					padding: 0px;}
-#myFlorida			{ height: 100%;
+#myFlorida			{ height:800px;
+					width: 100%;
 					margin: 0px;
 					padding: 0px;}
 
@@ -22,4 +27,4 @@ img					{width: 100%;
 					margin-right: auto;}
 h1, h2, p, footer		{padding: 20px;}
 
-form, ul, li			{padding: 10px;}
+form, ul	, li			{padding: 10px;}
