--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -1,22 +1,21 @@
- html		 		{width: 100%;
+ html, body	 		{width: 100%;
 					height: 100%;
 					margin: 0px;
-					padding: 10px;
+					padding: 0px;
 					font-family: Verdana, Arial; 
 					background-color:  #FFFFFF;}
-					
-body				{width: 100%;
-					height: 100%;
-					margin: 0px;
-					padding: 10px;
-					font-family: Verdana, Arial; 
-					background-color:  #FFFFFF;}
-#map-canvas			{  height: 800px;
-					width: 100%;
+
+#content 			{padding: 0;
+					position : absolute !important; 
+					top : 40px !important;  
+					right : 0; 
+					bottom : 40px !important;  
+					left : 0 !important; }
+
+#map-canvas			{  height: 100%;
 					margin: 0px;
 					padding: 0px;}
-#myFlorida			{ height:800px;
-					width: 100%;
+#myFlorida			{ height:100%;
 					margin: 0px;
 					padding: 0px;}
 
